# csse6400-2026-p1-starting-an-api-practical01

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
